used IconButton for edit

--- a/pype/tools/settings/settings/style/style.css
+++ b/pype/tools/settings/settings/style/style.css
@@ -97,6 +97,11 @@ QPushButton[btn-type="tool-item"]:hover {
     background-color: transparent;
 }
 
+QPushButton[btn-type="tool-item-icon"] {
+    border: 0px solid #bfccd6;
+    background-color: transparent;
+}
+
 QPushButton[btn-type="expand-toggle"] {
     background: #1d272f;
 }
