main windows will set shadow widget to visible if any widget changed state to working

--- a/pype/tools/settings/settings/style/style.css
+++ b/pype/tools/settings/settings/style/style.css
@@ -193,6 +193,9 @@ QPushButton[btn-type="expand-toggle"] {
     background-color: #21252B;
 }
 
+#ShadowWidget {
+    font-size: 36pt;
+}
 QTabWidget::pane {
     border-top-style: none;
 }
